src/client/index.css
/* ... */
.ant-modal-mask {
  z-index: 1003;
}

/* Modified - Ant design default CSS */
/*Loader*/
.ant-spin {
  position: absolute;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
  -webkit-transform: translate(-50%, -50%);
  -moz-transform: translate(-50%, -50%);
}

.ant-spin-dot .ant-spin-dot-item {
  background-color: #00ad50;
}

.fr-toolbar .fr-command.fr-btn[data-cmd="response"],
.fr-toolbar .fr-command.fr-btn[data-cmd="responseBoxes"],
.fr-toolbar .fr-command.fr-btn[data-cmd="textdropdown"],
.fr-toolbar .fr-command.fr-btn[data-cmd="textinput"] {
  border: 1px #000 dotted;
  height: 34px;
  padding: 0 4px;
  top: 4px;
}

.fr-toolbar .fr-command.fr-btn[data-cmd="responseBoxes"]::after {
  right: 4px !important;
  top: 14px !important;
}

.fr-toolbar .fr-command.fr-btn[data-cmd="textdropdown"]::after {
  content: "";
  width: 0;
  height: 0;
  border-color: #5f5f5f;
  border-left: 5px solid transparent;
  border-right: 5px solid transparent;
  border-top: 5px solid;
  margin-left: 5px;
  position: relative;
  top: 12px;
}
/*Checkbox*/
.ant-checkbox-input:focus + .ant-checkbox-inner,
.ant-checkbox-wrapper:hover .ant-checkbox-inner,
.ant-checkbox:hover .ant-checkbox-inner {
  border-color: #00ad50;
}

.ant-checkbox-checked .ant-checkbox-inner {
  background-color: #00ad50;
  border-color: #00ad50;
}

.ant-checkbox-indeterminate .ant-checkbox-inner::after {
  background-color: #00ad50;
}

/*Radio Input*/
.ant-radio-input:focus + .ant-radio-inner,
.ant-radio-wrapper:hover .ant-radio-inner,
.ant-radio:hover .ant-radio-inner {
  border-color: #00ad50;
}

.ant-radio-checked .ant-radio-inner {
  border-color: #00ad50;
}

.ant-radio-checked .ant-radio-inner::after {
  background-color: #00ad50;
}

.ant-calendar-picker:hover .ant-calendar-picker-input:not(.ant-input-disabled),
.ant-input-affix-wrapper:hover .ant-input:not(.ant-input-disabled),
.ant-input:hover,
.ant-select-focused .ant-select-selection,
.ant-select-selection:active,
.ant-select-selection:focus,
.ant-select-selection:hover {
  border-color: #00ad50;
}

.ant-btn-background-ghost.ant-btn-primary,
.ant-btn-background-ghost.ant-btn-primary:focus,
.ant-btn-background-ghost.ant-btn-primary:hover {
  color: #00ad50;
  border-color: #00ad50;
}

.ant-btn:focus,
.ant-btn:hover {
  border-color: #00ad50;
}

.ant-tabs-nav .ant-tabs-tab-active,
.ant-tabs-nav .ant-tabs-tab:hover {
  color: #00ad50;
}

.ant-tabs-ink-bar {
  background-color: #00ad50;
}

.ant-table-thead > tr > th .ant-table-column-sorter .ant-table-column-sorter-inner .ant-table-column-sorter-down.on,
.ant-table-thead > tr > th .ant-table-column-sorter .ant-table-column-sorter-inner .ant-table-column-sorter-up.on {
  color: #00ad50;
}

.ant-tabs.ant-tabs-card .ant-tabs-card-bar .ant-tabs-tab-active {
  color: #00ad50;
}

.ant-select-focused .ant-select-selection,
.ant-select-selection:active,
.ant-select-selection:focus {
  box-shadow: 0 0 1px 1px #5eb50066;
}

.ant-modal-wrap.test-preview-modal {
  overflow: unset;
  width: 100%;
  height: 100vh;
}

.ant-message-info .anticon {
  color: #f9942d;
}

.sortableHelper {
  z-index: 10000;
}

.ant-modal .ant-switch-checked {
  background-color: #00ad50;
}

.ant-affix {
  z-index: 50;
}

/* Passage type  */
.selected-text-heighlight {
  position: relative;
  cursor: pointer;
  z-index: 900;
}

.selected-text-heighlight.unsaved {
  background: #1890ff40;
}

.customTooltip div.ant-tooltip-inner {
  width: max-content;
}

.ant-modal-wrap {
  overflow-y: auto;
}

